# wowers

./: .gitignore  CF_CALIBRATION_REPORT.md  DIRECTOR_BRIEF_2026-06-24.md  ENERGY_CONSUMPTION_RESEARCH_PLAN.md  ENERGY_CONSUMPTION_SOURCES.md  EXCLUSION_FUNNEL_REPORT.md  FERC_CONDUIT_LABEL_REPORT.md  FERC_REVIEW_PROMPT.md  FRONTEND_PLAN.md  GEOJSON_UNIFY_PROMPT.md  GEOJSON_UNIFY_REVIEW_PROMPT.md  P1_COORD_GUARD_PROMPT.md  P1_COORD_GUARD_REVIEW_PROMPT.md  P2SEED_P1REPRO_PROMPT.md  P2SEED_P1REPRO_REVIEW_PROMPT.md  P4_TIER_EXPORT_REVIEW_PROMPT.md  P5_SMOKE_REVIEW_PROMPT.md  SETUP.md  SMOKE_TEST_REPORT.md  WOWERS_Director_Deepdive.pptx  WOWERS_PROJECT_JOURNAL.md  pyproject.toml
Fowler/: WOWERS.docx  Waste Outfall Water energy recovery System (WOWERS).docx  Wowers follow up after the submittion.docx
WOWERS/: ARCHITECTURE.md
WOWERS/Capital & Funding/: WOWERS_Capital_and_Funding_Research.md
WOWERS/Data Exploration & Analysis/: ARCHITECTURE.md  PHASE1_REPORT.md  PHASE2_REPORT.md
config/: energy_intensity.yaml  settings.yaml
config/electricity_rates/: state_rates.yaml
data/cost_calibration/: installed_costs.csv
exports/: viable_sites.geojson
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
pivot file download/: download_all_master.sh
scripts/: calibrate_capex_ab.py  cf_calibration.py  export_geojson.py  export_web_data.py  fetch_usbr_rise.py  install_cost_whatif.py  minrev_whatif.py  validate_energy_intensity.py
tests/: conftest.py
thesis/: THESIS_BREAKDOWN.md  THESIS_JOURNAL.md  thesis_format_prompt.md  thesis_tom.tex
(+83 files in other folders)
