[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wowers"
version = "0.1.0"
description = "Waste Outfall Water Energy Recovery System — data pipeline"
requires-python = ">=3.11"
dependencies = [
    # Data I/O
    "polars>=0.20",
    "pandas>=2.0",
    "pyarrow>=14.0",
    # HTTP & downloads
    "requests>=2.31",
    "httpx>=0.27",
    "tqdm>=4.66",
    # Statistics & numerics
    "numpy>=1.26",
    "scipy>=1.12",
    # Schema validation
    "pandera>=0.18",
    # Configuration
    "pyyaml>=6.0",
    # Financial math (Phase 4)
    "numpy-financial>=1.0",
    # ML (Phase 5)
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "optuna>=3.5",
    "shap>=0.44",
    # Fuzzy matching (Phase 5)
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
